# nvfuser_bazel

./: .gitignore  BUILD  MODULE.bazel  foo_test.py  requirements.txt
