module(name = "nvfuser_bazel")

bazel_dep(name = "aspect_rules_py", version = "0.5.0")
bazel_dep(name = "rules_python", version = "0.29.0")
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.11",
    ignore_root_user_error = True,
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.11",
    requirements_lock = "//:requirements.txt",
    # the less messing around with __init__.py files the better
    enable_implicit_namespace_pkgs = True,
)
use_repo(pip, "pypi")
